// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer account 1`] = `
Object {
  "account": "test",
  "addressPool": Array [],
  "addresses": Object {
    "test": "test",
  },
  "allBalances": Object {},
  "balances": Object {
    "test": "test",
  },
  "gasPrice": 0,
  "network": 0,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer addressPool 1`] = `
Object {
  "account": "test",
  "addressPool": Object {
    "123": Object {
      "test": "test",
    },
  },
  "addresses": Object {
    "test": "test",
  },
  "allBalances": Object {
    "123": Object {
      "test": "test",
    },
  },
  "balances": Object {
    "test": "test",
  },
  "gasPrice": 0,
  "network": 123,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer addresses 1`] = `
Object {
  "account": "0x0",
  "addressPool": Array [],
  "addresses": Object {
    "test": "test",
  },
  "allBalances": Object {},
  "balances": Object {
    "test": "test",
  },
  "gasPrice": 0,
  "network": 0,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer allBalances 1`] = `
Object {
  "account": "test",
  "addressPool": Array [],
  "addresses": Object {
    "test": "test",
  },
  "allBalances": Object {
    "123": Object {
      "test": "test",
    },
  },
  "balances": Object {
    "test": "test",
  },
  "gasPrice": 0,
  "network": 123,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer balances 1`] = `
Object {
  "account": "0x0",
  "addressPool": Array [],
  "addresses": Object {
    "feeCollector": Object {
      "address": "0x0",
      "balance": 0,
    },
    "operator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolManager": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed1": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed2": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed3": Object {
      "address": "0x0",
      "balance": 0,
    },
  },
  "allBalances": Object {},
  "balances": Object {
    "test": "test",
  },
  "gasPrice": 0,
  "network": 0,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer custodianPrices 1`] = `
Object {
  "account": "0x0",
  "addressPool": Array [],
  "addresses": Object {
    "feeCollector": Object {
      "address": "0x0",
      "balance": 0,
    },
    "operator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolManager": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed1": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed2": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed3": Object {
      "address": "0x0",
      "balance": 0,
    },
  },
  "allBalances": Object {},
  "balances": Object {
    "allowance": 0,
    "duo": 0,
    "eth": 0,
    "tokenA": 0,
    "tokenB": 0,
  },
  "gasPrice": 0,
  "network": 0,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer custodianStates 1`] = `
Object {
  "account": "0x0",
  "addressPool": Array [],
  "addresses": Object {
    "feeCollector": Object {
      "address": "0x0",
      "balance": 0,
    },
    "operator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolManager": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed1": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed2": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed3": Object {
      "address": "0x0",
      "balance": 0,
    },
  },
  "allBalances": Object {},
  "balances": Object {
    "allowance": 0,
    "duo": 0,
    "eth": 0,
    "tokenA": 0,
    "tokenB": 0,
  },
  "gasPrice": 0,
  "network": 0,
  "prices": Object {
    "first": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "last": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "reset": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "second": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "states": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer default 1`] = `
Object {
  "account": "0x0",
  "addressPool": Array [],
  "addresses": Object {
    "feeCollector": Object {
      "address": "0x0",
      "balance": 0,
    },
    "operator": Object {
      "address": "0x0",
      "balance": 0,
    },
    "poolManager": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed1": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed2": Object {
      "address": "0x0",
      "balance": 0,
    },
    "priceFeed3": Object {
      "address": "0x0",
      "balance": 0,
    },
  },
  "allBalances": Object {},
  "balances": Object {
    "allowance": 0,
    "duo": 0,
    "eth": 0,
    "tokenA": 0,
    "tokenB": 0,
  },
  "gasPrice": 0,
  "network": 0,
  "prices": Object {
    "first": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "last": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "reset": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
    "second": Object {
      "address": "0x0",
      "price": 0,
      "timestamp": 0,
    },
  },
  "states": Object {
    "addrPoolLength": 0,
    "adminCoolDown": 0,
    "alpha": 0,
    "beta": 0,
    "createCommRate": 0,
    "duoBalance": 0,
    "ethBalance": 0,
    "ethDuoFeeRatio": 0,
    "feeAccumulated": 0,
    "iterationGasThreshold": 0,
    "lastAdminTime": 0,
    "limitLower": 0,
    "limitPeriodic": 0,
    "limitUpper": 0,
    "navA": 0,
    "navB": 0,
    "nextResetAddrIndex": 0,
    "numOfPrices": 0,
    "period": 0,
    "periodCoupon": 0,
    "preResetWaitingBlocks": 0,
    "priceFeedTimeTol": 0,
    "priceFeedTol": 0,
    "priceTol": 0,
    "priceUpdateCoolDown": 0,
    "redeemCommRate": 0,
    "state": "Loading",
    "totalSupplyA": 0,
    "totalSupplyB": 0,
    "usersLength": 0,
  },
}
`;

exports[`ui reducer network 1`] = `
Object {
  "account": "test",
  "addressPool": Array [],
  "addresses": Object {
    "test": "test",
  },
  "allBalances": Object {},
  "balances": Object {
    "test": "test",
  },
  "gasPrice": 0,
  "network": 123,
  "prices": Object {
    "last": "last",
    "reset": "reset",
  },
  "states": Object {
    "test": "test",
  },
}
`;
